review alignment/spacing of icons https://github.com/IBM-Bluemix/openwhisk-darkvisionapp/issues/29

--- a/web/public/css/darkvision-dark.css
+++ b/web/public/css/darkvision-dark.css
@@ -35,6 +35,10 @@ md-toolbar md-icon {
   color: #ffffff !important;
 }
 
+.upload-button[disabled] {
+  color: rgba(255,255,255,0.26) !important;
+}
+
 md-progress-circular path {
   stroke: white !important;
 }
