--- a/web/public/css/darkvision.css
+++ b/web/public/css/darkvision.css
@@ -26,19 +26,28 @@ body, html {
 
 .upload-button {
   height: 50px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 8px;
   text-transform: capitalize;
   border: none;
   border-radius: 0;
+  margin: 0;
+}
+
+.upload-button md-icon {
+  width: 22px;
+  height: 18px;
+  min-width: 22px;
+  min-height: 18px;
+  font-size: 22px !important;
+  line-height: 14px;
+  margin-left: 6px;
 }
 
 .upload-button md-progress-circular {
   display: inline-block;
   top: 5px;
-  width: 24px !important;
-  height: 24px;
+  width: 22px !important;
+  height: 22px;
+  margin-left: 6px;
 }
 
 spinner {
@@ -80,9 +89,15 @@ md-toolbar {
 
 button.md-button.md-icon-button, a.md-button.md-icon-button {
   margin-left: 8px;
+  padding: 0;
+}
+
+a.md-icon-button md-icon {
+  margin-top: 6px;
 }
 
 md-icon {
+  line-height: 28px;
   width: 28px;
   height: 28px;
   font-size: 28px !important;
